# ts-game

./: .gitignore  AGENTS.md  README.md  TODO.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AI.ts  Combat.ts  GameState.ts  Item.ts  Render.ts  Transform.ts  index.ts
src/components/card/: Card.ts  CardCombat.ts  Deck.ts  index.ts
src/components/combat/: Combat.ts  Skills.ts  index.ts
src/components/core/: Attributes.ts  Cultivation.ts  Identity.ts  Transform.ts  Vision.ts  index.ts
src/components/items/: Equipment.ts  Inventory.ts  Render.ts  index.ts
src/ecs/: World.ts  index.ts
src/entities/: Enemy.ts  Item.ts  Player.ts
src/factories/: EntityFactory.ts
src/scenes/: BootScene.ts  ECSScene.ts  ECSUIScene.ts  GameOverScene.ts  GameScene.ts  MainMenuScene.ts  UIScene.ts  WorldScene.ts
src/scenes/card/: CardBattleScene.ts
src/systems/: MapSystem.ts
src/systems/ecs/: AISystem.ts  CleanupSystem.ts  CombatSystem.ts  InputSystem.ts  ItemSystem.ts  MovementSystem.ts  RenderSystem.ts  TurnSystem.ts  index.ts
src/systems/ecs/combat/: CombatSystem.ts  SkillSystem.ts  index.ts
src/systems/ecs/core/: AttributeSystem.ts  MovementSystem.ts  RenderSystem.ts  VisionSystem.ts  index.ts
src/types/: game.ts
src/utils/: index.ts
