[package]
name = "rogue-game"
version = "1.0.0"
description = "A roguelike 2D game built with Phaser + TypeScript + Vite"
authors = [""]
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
